pages/index.css
@import url(../vendor/normalize.css);
@import url(../fonts/fonts.css);

@import url(../blocks/page/page.css);

@import url(../blocks/content/content.css);

@import url(../blocks/header/header.css);
@import url(../blocks/header/__logo/header__logo.css);
@import url(../blocks/header/__language/header__language.css);
@import url(../blocks/header/__lang-options/header__lang-options.css.css);
@import url(../blocks/header/__lang-options/_active/header__lang-options_active.css);

@import url(../blocks/lead/lead.css);
@import url(../blocks/lead/__title/lead__title.css);
@import url(../blocks/lead/__subtitle/lead__subtitle.css);
@import url(../blocks/lead/__image/lead__image.css);
@import url(../blocks/lead/__caption/lead__caption.css);

@import url(../blocks/intro/intro.css);
@import url(../blocks/intro/__title/intro__title.css);
@import url(../blocks/intro/__text/intro__text.css);
@import url(../blocks/intro/__list/intro__list.css);
@import url(../blocks/intro/__list-text/intro__list_text.css);

@import url(../blocks/photo-grid/photo-grid.css);
@import url(../blocks/photo-grid/__item/photo-grid__item.css);

@import url(../blocks/places/places.css);
@import url(../blocks/place/place.css);
@import url(../blocks/place/__title/place__title.css);
@import url(../blocks/place/__website/place__website.css);
@import url(../blocks/place/__caption/place__caption.css);
@import url(../blocks/place/__link/place__link.css);
@import url(../blocks/place/__image/place__image.css);
@import url(../blocks/place/__paragraph/place__paragraph.css);
@import url(../blocks/place/__article/place__article.css);

@import url(../blocks/cover/cover.css);
@import url(../blocks/cover/__image/cover__image.css);
@import url(../blocks/cover/__title/cover__title.css);
@import url(../blocks/cover/__subtitle/cover__subtitle.css);

@import url(../blocks/footer/footer.css);
@import url(../blocks/footer/__copyright/footer__copyright.css);
@import url(../blocks/footer/__list/footer__list.css);
@import url(../blocks/footer/__link/footer__link.css);

@import url(../blocks/link-opacity/link-opacity.css);

